--- a/Courses.html
+++ b/Courses.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="carousel-item active">
-                    <div class="jumbotron pulse animated hero-photography carousel-hero">
+                    <div class="jumbotron pulse animated hero-photography carousel-hero" style="opacity: 0.46;">
                         <h1 class="hero-title">طريقتنا قائمة على التطبيق&nbsp;</h1>
                         <p class="hero-subtitle">جميع الكورسات التي نقدمها قائمة على التطبيق وبناء المشاريع&nbsp;</p>
                         <p><a class="btn btn-primary hero-button plat" role="button" href="#">استعرض الطريقة&nbsp;</a></p>
